--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         }
     ],
     "require": {
-        "php": ">= 5.5"
+        "php": ">= 5.5",
+        "ganbarodigital/php-mv-exception-helpers": "^1.2016061902",
+        "ganbarodigital/php-the-missing-bits": "dev-develop as 1.10.0",
+        "justinrainbow/json-schema": "^3.0",
+        "ganbarodigital/php-mv-json-parser": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.6",
